ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress  
metadata:  
  name: cluster-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "web-app"
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  tls:
    - hosts:
      -  demo.local
      secretName: tls-certificate
  rules:
  - host:  demo.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: simple-server-api
            port:
              number: 8080
      # - path: /(/|$)(.*)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-app
            port:
              number: 80
